--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/kv": "^3.0.0",
+    "ioredis": "^5.9.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.9",
     "react": "19.1.0",
