--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@vercel/kv": "^3.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.27.5",
     "ioredis": "^5.9.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
